Fix z-index for sidebar

--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -36,6 +36,7 @@ header {
 
 .sidebar {
     position: fixed;
+    z-index: 1;
     top: 0;
     right: 0;
     width: 250px;
